# ScaleChain

./: README.md
mainNode/rust_p2p/: Cargo.toml
mainNode/rust_p2p/coded_merkle_tree/chain/: Cargo.toml
mainNode/rust_p2p/go-bls/: aggregate  keygen  sign
mainNode/rust_p2p/go-bls/curves/: bls.go
mainNode/rust_p2p/go-bls/keyfile/: node2  node3
mainNode/rust_p2p/go-bls/packer/: go.mod  main.go
mainNode/rust_p2p/src/: main.rs
mainNode/rust_p2p/src/LDPC_codes/: k=32_decode.txt  k=32_encode.txt
mainNode/rust_p2p/src/api/: apiServer.rs  mod.rs  transactionGenerator.rs
mainNode/rust_p2p/src/blockchain/: blockchain.rs  mod.rs
mainNode/rust_p2p/src/cmtda/: mod.rs
mainNode/rust_p2p/src/contract/: .mod.rs.swp  abi.json  contract.rs  interface.rs  mod.rs  utils.rs
mainNode/rust_p2p/src/db/: blockDb.rs  mod.rs
mainNode/rust_p2p/src/experiment/: mod.rs  snapshot.rs  transactionGenerator.rs
mainNode/rust_p2p/src/mainChainManager/: mod.rs
mainNode/rust_p2p/src/mempool/: mempool.rs  mod.rs  scheduler.rs
mainNode/rust_p2p/src/miner/: mempool.rs  miner.rs  (+1 more)
mainNode/rust_p2p/workspace/: Readme  abi.json  account0  account1  aggregate  common_cmd  curl_cmd  generate_tx_per_sec.sh  killall.sh  local_exp.sh  neighbor0  neighbor1  neighbor2  neighbors  out0  out1  run.sh  run_experiment.sh  side_node  simulate.sh  single_node.rs  start.sh  test.py
main_node/: Cargo.toml  mainNode-config_1.json
main_node/src/: main.rs
rs-bls/: Cargo.toml  abi_sorter.json  account0  account1  account_1  account_2  account_4  account_5  account_admin  account_test  keygen  msg.txt  sign  timeused.csv
rs-bls/keyfile/: key_1  node1  node5  node6
rs-bls/src/: abi3.json  main.rs  utils.rs
(+64 files in other folders)
