[package]
name = "main_node"
version = "0.1.0"
authors = ["psheng2 <psheng2@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
ethereum-tx-sign = "3.0.1"
ethereum-types = "0.6.0"
hex = "0.3.1"
rust-crypto = "0.2.36"
secp256k1 = { version = "0.17.2", features = ["recovery"]}
serde_json = "1.0" 
ethabi = "11.0.0"


