[package]
name = "bls"
version = "0.1.0"
authors = ["psheng2 <psheng2@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
#bn = { package = "witnet-bn", version = "0.4.5" }
hex = "0.4.2"
web3 = "0.10.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4.8"
ethereum-types = "0.9.2"
secp256k1 = { version = "0.17.2", features = ["recovery"]}
ethereum-tx-sign = "3.0.1"
rust-crypto = "0.2.36"
bincode = "1.2.0"
