[package]
name = "system_rust"
version = "0.1.0"
authors = ["bx3 <bx3@uw.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.6.20"
mio-extras = "2.0.5"
serde = { version = "1.0", features = ["derive"]} 
bincode = "1.2.0"
log = "0.4.8"
clap = "2.33.0"
rand = "0.7.2"
rust-crypto = "0.2.36"
petgraph = "0.4.13"
tiny_http = "0.6"
futures = "0.1"
web3 = "0.10.0"
serde_json = "1.0"
url = "2.1.1"
crossbeam = "0.7.3"
